<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    android:layoutDirection="rtl"
    android:padding="10dp"
    tools:context=".activities.AdminPanelActivity">

    <LinearLayout
        android:id="@+id/adminPanel_pendingGroupsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/page_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/adminPanel_groupsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/groups"
            android:textColor="@color/colorBackground"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/adminPanel_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:padding="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:visibility="gone">

            <Button
                android:id="@+id/adminPanel_checkGroupsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/check"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/adminPanel_addBlogBtn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/page_background"
        android:text="@string/add_blog"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/adminPanel_pendingGroupsLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>